codex-rs/tui/src/snapshots/codex_tui__transcript_view__tests__horizontal_selection_at_edge_0.snap
---
source: tui/src/transcript_view_tests.rs
expression: text(&selected)
---
row 22
row 23
row 24
row 25
row 26
row 27
