codex-rs/tui/src/snapshots/codex_tui__transcript_view__tests__page_keys_follow_pager_scroll_bindings.snap
---
source: tui/src/transcript_view_tests.rs
expression: "frames.join(\"\\n\\n\")"
---
default
row 16
row 17
row 18
row 19
row 20
row 21
row 22
row 23

half page
row 19
row 20
row 21
row 22
row 23
row 24
row 25
row 26

single row
row 22
row 23
row 24
row 25
row 26
row 27
row 28
row 29

unbound
row 23
row 24
row 25
row 26
row 27
row 28
row 29
row 30
