codex-rs/tui/src/snapshots/codex_tui__transcript_view__tests__wheel_stops_selection_autoscroll.snap
---
source: tui/src/transcript_view_tests.rs
expression: "frames.join(\"\\n\\n\")"
---
row 19
row 20
row 21
row 22
row 23
row 24

row 25
row 26
row 27
row 28
row 29
row 30
